--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P`Way-Online Store | Official-Home Page</title>
+  <title>P`Way | Official-Home Page</title>
   <link rel = "stylesheet" href = "css/index.css?v=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
@@ -126,9 +126,9 @@
     </div>
 
     <div class = "layer-two-tabs">
-      <div class = "icon-container">
+      <div  class = "icon-container">
         
-        <i id = "shopping-bag" class="fa fa-shopping-bag" aria-hidden="true"></i>
+        <i onclick = "windows.location.html = 'categories.html'" id = "shopping-bag" class="fa fa-shopping-bag" aria-hidden="true"></i>
         <p class = "icon-text">Categories</p>
 
       </div>
@@ -159,13 +159,13 @@
         </div>
       </div>
       <div class = "icon-container">
-        <i id = 'wishlist' class="fa fa-heart" aria-hidden="true"></i>
+        <i onclick = "window.location.href = 'wishlist.html'" id = 'wishlist' class="fa fa-heart" aria-hidden="true"></i>
         <p class = "icon-text">Wishlist</p>
 
       </div>
       
       <div class = "icon-container">
-        <i id = 'cart' class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+        <i onclick = "window.location.href ='cart.html'" id = 'cart' class="fa fa-cart-arrow-down" aria-hidden="true"></i>
         <p class = "icon-text">Cart</p>
   
       </div>
