--- a/public/help.html
+++ b/public/help.html
@@ -27,7 +27,7 @@
 
       <div class = 'bottom-nav'>
         <div class = "nav-bar-tabs">
-          <div onclick = "window.location.html = 'index.html'"  class = "icon-container">          
+          <div onclick = "window.location.href = 'index.html'"  class = "icon-container">          
             <i  id = "home" class="fa fa-home" aria-hidden="true"></i>
             <p class = "icon-text">Home</p>
     
