--- a/public/index.html
+++ b/public/index.html
@@ -128,8 +128,8 @@
     <div class = "layer-two-tabs">
       <div  class = "icon-container">
         
-        <i onclick = "windows.location.html = 'categories.html'" id = "shopping-bag" class="fa fa-shopping-bag" aria-hidden="true"></i>
-        <p class = "icon-text">Categories</p>
+        <i onclick = "window.location.href = 'categories.html'" id = "shopping-bag" class="fa fa-shopping-bag" aria-hidden="true"></i>
+        <p class = "icon-text">Shop</p>
 
       </div>
       <div id = 'user-account-icon' class = 'icon-container'>      
