update all settings

--- a/public/request_reset.html
+++ b/public/request_reset.html
@@ -10,15 +10,12 @@
 <body>
   <header>
   
-    <button class = "login-btn" type = "button" onclick = "window.location.href = 'login.html'" >Log in</button>
-
-    <span class = "tab-links"><a href="index.html">Home</a></span>
+    <span onclick = "window.location.href='settings.html'" class = "fa fa-arrow-left back-arrow"></span>
+    <span class = "login-btn" type = "div" onclick = "window.location.href = 'login.html'" >Log in</button>
 
 
 </header>
-<br>
 
-  <div class = "wrapper">
     <div class ="container">
       <h2>Request Password Reset</h2>
   
@@ -49,7 +46,6 @@
       <br>
   
     </div>
-  </div>
   <br>
   <br>
   
