--- a/public/delete_warning.html
+++ b/public/delete_warning.html
@@ -6,13 +6,19 @@
   <title>Account Deletion Warning</title>
   <link rel = "stylesheet" href="css/settings.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+  <script>
+    $(function (params) {
+      $('#more-btn').click(()=>{
+        $('.hidden-tabs').toggleClass('animateIn')
+      })
+    })
+  </script>
 </head>
 <body>
   <header>
-    <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
+    <div class = "heading-two"><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></div >
 
-    
+    <span onclick = "window.location.href='settings.html'" class = "fa fa-arrow-left back-arrow"></span>
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
     <span><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
     <span><a href="account.html"><i id = 'user' class="fa fa-user" aria-hidden="true"></i></a></span>
@@ -32,7 +38,7 @@
   <div class = "wrapper">
 
       <div class = "container">
-        <h2>Your Attention Please!</h2>
+        <div class = "warning-heading">Your Attention Please!</div>
 
       <p class = "delete-warnings">At signup, your account was created and your personal data generated then were stored with us. 
         When you request for account deletion, you are about to erase all your personal data stored.</b></p>
