--- a/public/edit_profile.html
+++ b/public/edit_profile.html
@@ -24,7 +24,8 @@
 
     <span onclick = "window.location.href = 'settings.html'" class = "fa fa-arrow-left back-arrow"></span>
 
-    <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
+
+    <i id = "more-btn"class="fa fa-ellipsis-v" aria-hidden="true"></i>
     <span><i class="fa fa-shopping-cart" aria-hidden="true"></i></span>
     <span><a href="account.html"><i id = 'user' class="fa fa-user" aria-hidden="true"></i></a></span>
     <span><a href="index.html"><i id = 'home' class="fa fa-home" aria-hidden="true"></i></a></span>    
