--- a/public/settings.html
+++ b/public/settings.html
@@ -13,13 +13,11 @@
 <body>
   <header>
   
-    <a href="account.html"><span class = "fa fa-arrow-left"></span>
-    </a>
-    <button class = "login-btn" type = "button" onclick = "window.location.href = 'login.html'" >Log in</button>
+    <span onclick = "window.location.href ='account.html'" class = "fa fa-arrow-left"></span>
 
     <span class = "tab-links"><a href="index.html">Home</a></span>
 
-  <h2>Settings</h2>
+  <div class = "page-title">Settings</div>
 
 </header>
 
