--- a/public/aftersales answers.html
+++ b/public/aftersales answers.html
@@ -52,9 +52,8 @@
   <header>
     <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
 
-    <span>
-      <a href="help.html"><span id = "angle-blink"class = "fa fa-arrow-left"></span></a>
-    </span>
+    <span onclick = "window.location.href = 'help.html'" class = "fa fa-arrow-left back-arrow"></span>
+
     <span class = "header-text">About aftersales</span>
 
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
@@ -73,7 +72,7 @@
         <div class = "container"><h4 class = "quiz">Goods not matching description</h4>
           <span class = 'desc-icon'><i id = "open1" class="fa  fa-sort-desc" aria-hidden="true" data-answer = "#answer1"></i></span>
             <ol class = "answer" id = "answer1">
-              <li><b>Step 1</b>: Go to <u style="color:blue;">Account</u> tab, in the <u style="color:blue;">Aftersales</u> section</li>
+              <li><b>Step 1</b>: Go to <u style="color:blue;cursor: pointer;" onclick = "window.location.href='account.html'">Account</u> tab, in the <u style="color:blue;">Aftersales</u> section</li>
               <li><b>Step 2</b>: Click <u style="color:blue;">To be reviewed</u> to see the items that you ordered and their descriptions. Confirm the details. <br><br>If the details in the delivered item do not match those in the ordered items, then click the <u style = "color:blue;">Chat seller</u> button below the item and do as instructed.</li>
             </ol>
         </div>
@@ -81,7 +80,7 @@
           <div class = "container"><h4 class = "quiz">How do I return goods</h4>
             <span class = 'desc-icon'><i id = "open2" class="fa  fa-sort-desc" aria-hidden="true" data-answer="#answer2"></i></span>
               <ol class = "answer" id = "answer2">
-                <li><b>Step 1</b>: Go to <u style = "color:blue;">Account</u> and to the <u style = "color:blue;">Aftersales</u> section</li>
+                <li><b>Step 1</b>: Go to <u style = "color:blue;cursor: pointer;" onclick = "window.location.href ='account.html'">Account</u> and to the <u style = "color:blue;">Aftersales</u> section</li>
                 <li><b>Step 2</b>: Select <u style = "color:blue;">Apply refund/aftersale</u></li>
               </ol>
          </div>
