--- a/public/help.html
+++ b/public/help.html
@@ -73,13 +73,13 @@
   </div>
   
 <div class = "marquee-container">  
-  <marquee>Your Convenience At Shopping Is Our Priority</marquee>
+  <marquee>Conveniently shop at the P`Way</marquee>
 </div> 
 
 
   <div class = "align-blocks">
     <div class = "topics-container">
-      <div style = "margin-left: 2%;"><b>Frequently Searched Topics</b></div>
+      <div class = "container-titles"><b>Frequently Searched Topics</b></div>
       <br>
   
       <div onclick="window.location.href ='order answers.html'" class = 'topics'><span><i  class="fa fa-angle-double-right" aria-hidden="true"></i></span>About orders</div>
@@ -93,7 +93,7 @@
     </div>
     
     <div class = "general-solutions-container">
-      <div style = "margin-left: 2%;"><b>Quick Solutions</b></div>
+      <div class = "container-titles"><b>Quick Solutions</b></div>
       <br>
   
       <div id = 'location' onclick = "window.location.href = 'change_shipping_address.html'"> <i style = "color: orange;" class="fa fa-map-marker" aria-hidden="true"></i>Manage shipping address</div>
@@ -108,7 +108,7 @@
   </div>
 
   <div class = "questions-container">
-    <div style = "margin-left: 2%;"><b>Frequently Asked Questions</b></div>
+    <div class = "container-titles"><b>Frequently Asked Questions</b></div>
     <br>
 
     <div class = "faq-container">
