--- a/public/refund answers.html
+++ b/public/refund answers.html
@@ -50,9 +50,8 @@
   <header>
     <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
 
-    <span>
-      <a href="help.html" ><span id = "angle-blink" class = "fa fa-arrow-left"></span></a>
-    </span>
+    <span onclick = "window.location.href = 'help.html'" class = "fa fa-arrow-left back-arrow"></span>
+
     <span class = "header-text">Refund me</span>
 
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
