--- a/public/selection answers.html
+++ b/public/selection answers.html
@@ -73,9 +73,8 @@
   <header>
     <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
 
-    <span>
-      <a href="help.html" ><span id = "angle-blink" class = "fa fa-arrow-left"></span></a>
-    </span>
+    <span onclick = "window.location.href = 'help.html'" class = "fa fa-arrow-left back-arrow"></span>
+
     <span class = "header-text">About selection</span>
 
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
@@ -95,7 +94,7 @@
     <div class = "container"><h4 class="quiz">How to find the right product</h4>
       <span class = 'desc-icon'><i id = "open1" class="fa  fa-sort-desc" aria-hidden="true"></i></span>
         <ol id = "answer1">
-        <li><b>Step 1</b>: Go to <u style = "color:blue;">Categories</u> tab and shop with categories</li><br>
+        <li><b>Step 1</b>: Go to <u style = "color:blue;cursor: pointer;" onclick = "window.location.href='categories.html'">Categories</u> tab and shop with categories</li><br>
         <li><b>Step 2</b>: Select the <u style="color:blue;">category</u> you want to shop with</li><br>
   
         <li><b>Or: </b> <br><br> Within the product section, click <u style = "color:blue;">Chat seller</u> to enquire more about the product</li>
@@ -157,7 +156,7 @@
       <span class = 'desc-icon'><i id = "open7" class="fa  fa-sort-desc" aria-hidden="true"></i></span>
         <ol id = "answer7">
           <li>Wishlist is where your favorite items go to. <br><br>
-            During shopping , you can come across a nice item that you intended not to buy, you can then put it in the <u style = "color: blue;">Wishlist</u> and get it next time</li>
+            During shopping , you can come across a nice item that you intended not to buy, you can then put it in the <u style = "color: blue;cursor: pointer;" onclick = "window.location.href='wishlist.html'">Wishlist</u> and get it next time</li>
         </ol>
         </div>
     <br>
