--- a/public/accmangt answers.html
+++ b/public/accmangt answers.html
@@ -44,9 +44,8 @@
   <header>
     <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
 
-    <span>
-      <a href="help.html"><span id = "angle-blink"class = "fa fa-arrow-left"></span></a>
-    </span>
+    <span onclick = "window.location.href = 'help.html'" class = "fa fa-arrow-left back-arrow"></span>
+
     <span class = "header-text">Manage Account</span>
 
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
@@ -67,7 +66,7 @@
         <span class = 'desc-icon'><i id = "open1" class="fa  fa-sort-desc" aria-hidden="true"></i></span>
           <ol id = "answer1">
             <li><b>Step 1</b>: Go to <u style="color:blue;"><a href="login.html">Login page</a></u>. Click the <u style="color:blue;"><a href="reset.html">Forgot password</a></u> link</li>
-            <li><b>Step 2</b>: Similarly, <a href="reset">click this link</a> to reset your password directly</li>
+            <li><b>Step 2</b>: Similarly, <a href="request_reset.html">click this link</a> to reset your password directly</li>
           </ol>
       </div>
       <br>
@@ -77,7 +76,7 @@
             <li><b>Step 1</b>: Log in, go to settings in the account tab</li>
             <li><b>Step 2</b>: Click change email address</li>
             <br>
-            <p>OR click this link <a href="">Change email address</a></p>
+            <p>OR click this link <a href="email_phonechange_req.html">Change email address</a></p>
           </ol>
           <br>
       </div>
@@ -95,7 +94,7 @@
         <span class = "desc-icon"><i id = "open4" class = "fa fa-sort-desc"></i></span>
         <p class = "warning" style = "color:red;">Attention: Once you delete your account, it can't be restored. All your information; personal data and order information will be permanently deleted.</p>
         <ol id = "answer4">
-          <li><b>Step 1</b>:Go to <u style = "color:blue">privacy center </u>in the <u style = "color:blue;">settings</u> and click on delete my account</li>
+          <li><b>Step 1</b>:Go to <u style = "color:blue;" onclick = "window.location.href = 'settings.html'">settings</u> and click on delete my account</li>
           <li><b>Step 2</b>:We will run a check to spot if you have active order or unpaid payments. Please complete all order payments first.</li>
           <li><b>Step 3</b>:Run through the verification process to ensure it is the account owner proceeding</li>
           
