--- a/public/payment answers.html
+++ b/public/payment answers.html
@@ -56,9 +56,8 @@
   <header>
     <h2><span style = "color:fuchsia;">P`Way<span style = "color:blue">Express</span></h2>
 
-    <span>
-      <a href="help.html" ><span id = "angle-blink" class = "fa fa-arrow-left"></span></a>
-    </span>
+    <span onclick = "window.location.href = 'help.html'" class = "fa fa-arrow-left back-arrow"></span>
+
     <span class = "header-text">About payments</span>
 
     <span><i id = "more-btn" class="fa fa-ellipsis-v" aria-hidden="true"></i></span>
@@ -95,6 +94,7 @@
           <li><b>Cards/Bank tranfser</b></li>
           <li><b>Mobile money(M-pesa)</b></li>
           <li><b>Voucher</b></li>
+          <p>Alternatively visit <u style = "color:blue;cursor:pointer;" onclick = "window.location.href='payments.html'">Payments</u></p>
         </ol>
     </div>
     <br>
