--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
   <p id = "test-width"></p>
 
 
-  
+  <button onclick = "window.location.href ='small navigation.html'">Check this</button>
   <br>
   <br>
   <br>
